<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="rs.codecentric.praksatwitterapp.HomepageActivity">


    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_action"
        app:showAsAction="always"
        />

    <item android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="always" />

    <item android:id="@+id/action_following"
        android:title="@string/action_following"
        app:showAsAction="always" />

    <!-- Help -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always"/>

    <!-- Check updates -->
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="always" />
</menu>
