<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="rs.codecentric.praksatwitterapp.RegisterActivity"
    android:weightSum="1"
    android:gravity="center"
    android:background="@drawable/p1">

    <EditText android:id="@+id/first_name"

        android:layout_width="276dp"
        android:layout_gravity="center"
        android:layout_height="38dp"
        android:hint="@string/first_name"
        android:background="@drawable/edittextstyle"
        android:padding="8dp"
        android:layout_weight="0.08" />

    <EditText android:id="@+id/last_name"
        android:layout_marginTop="@dimen/password_margin_top"
        android:layout_width="276dp"
        android:layout_gravity="center"
        android:layout_height="38dp"
        android:hint="@string/last_name"
        android:background="@drawable/edittextstyle"
        android:padding="8dp"
        android:layout_weight="0.08" />

    <EditText android:id="@+id/username"
        android:layout_marginTop="@dimen/password_margin_top"
        android:layout_width="276dp"
        android:layout_gravity="center"
        android:layout_height="38dp"
        android:hint="@string/username"
        android:background="@drawable/edittextstyle"
        android:padding="8dp"
        android:layout_weight="0.08" />

    <EditText android:id="@+id/password"
        android:layout_width="276dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/password_margin_top"
        android:layout_height="38dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/edittextstyle"
        android:padding="8dp"
        android:layout_weight="0.08" />

    <EditText android:id="@+id/email"
        android:layout_width="276dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/password_margin_top"
        android:layout_height="38dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:background="@drawable/edittextstyle"
        android:padding="8dp"
        android:layout_weight="0.08" />

    <Button
        android:id="@+id/register"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/password_margin_top"
        android:layout_gravity="center"
        android:onClick="register"
        android:text="@string/register"
        android:background="#ff15abff"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/main_footer"
        android:textColor="#ffffffff"
        android:textSize="@dimen/abc_text_size_body_1_material" />

</LinearLayout>
