<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:weightSum="1"
    android:gravity="center_vertical"
    android:background="@drawable/p1">


    <EditText android:id="@+id/username"
        android:layout_width="276dp"
        android:layout_gravity="center"
        android:layout_height="35dp"
        android:hint="@string/username"
        android:background="@drawable/edittextstyle"
        android:padding="8dp"
        android:layout_weight="0.08" />

    <EditText android:id="@+id/password"
        android:layout_width="276dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/password_margin_top"
        android:layout_height="35dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:padding="8dp"
        android:layout_weight="0.08"
        android:background="@drawable/edittextstyle"/>

    <Button
        android:id="@+id/login"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/password_margin_top"
        android:layout_gravity="center"
        android:onClick="login"
        android:text="@string/login"
        android:background="#ff15abff"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/forgot_pass_margin"
        android:textColor="#ffffffff"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:textColorLink="#ff32cfd9"
        android:text="@string/forgot_password"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:text="@string/main_footer"
        android:textColor="#ffffffff"
        android:textSize="@dimen/abc_text_size_body_1_material" />

</LinearLayout>
