<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="rs.codecentric.praksatwitterapp.SettingsActivity"
    android:background="@drawable/p1">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ffffff">
    <ImageView
        android:id="@+id/userImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_default_user"
        android:layout_gravity="center" />
    </FrameLayout>

    <EditText android:id="@+id/first_name"
        android:layout_marginTop="@dimen/settings_margin_top"
        android:layout_width="276dp"
        android:layout_gravity="center"
        android:layout_height="38dp"
        android:background="@drawable/edittextstyle"
        android:padding="8dp"
         />

    <EditText android:id="@+id/last_name"
        android:layout_marginTop="@dimen/password_margin_top"
        android:layout_width="276dp"
        android:layout_gravity="center"
        android:layout_height="38dp"
        android:background="@drawable/edittextstyle"
        android:padding="8dp"
         />

    <Button
        android:id="@+id/change_password"
        android:layout_gravity="center"
        android:layout_width="276dp"
        android:layout_height="@dimen/buttons_height"
        android:text="@string/change_password"
        android:layout_marginTop="@dimen/password_margin_top"
        android:onClick="showTab"
        android:background="#ff15abff"
        android:textColor="#ffffffff"
        />

    <EditText android:id="@+id/password"
        android:layout_width="276dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/password_margin_top"
        android:layout_height="38dp"
        android:inputType="textPassword"
        android:background="@drawable/edittextstyle"
        android:visibility="invisible"
        android:hint="@string/new_password"
        android:padding="8dp"
        />

    <EditText android:id="@+id/confirm_password"
        android:layout_width="276dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/password_margin_top"
        android:layout_height="38dp"
        android:inputType="textPassword"
        android:background="@drawable/edittextstyle"
        android:visibility="invisible"
        android:hint="@string/confirm_new_password"
        android:padding="8dp"
        />

    <Button
        android:id="@+id/apply_changes"
        android:layout_width="276dp"
        android:layout_height="@dimen/buttons_height"
        android:layout_marginTop="@dimen/password_margin_top"
        android:layout_gravity="center"
        android:onClick="applyChanges"
        android:text="@string/apply_changes"
        android:background="#ff15abff"
        android:textColor="#ffffffff" />

</LinearLayout>
